5.1. BufferedReader [#252489 #510362]